--- a/w1-d2-intro-python-data-structures.ipynb
+++ b/w1-d2-intro-python-data-structures.ipynb
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,27 +1868,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fake School 1 - Saul\n",
-      "Fake School 3 - Saul\n"
+      "Fake School 1 - Saul\n"
      ]
     }
    ],
    "source": [
     "# 4 - Retrieve the student with the first name of \"Saul\"\n",
-    "for school in schoolSystem[\"schools\"]:\n",
-    "    for classRooms in school[\"classRooms\"]:\n",
-    "        for student in classRooms[\"students\"]:\n",
-    "            if student[\"firstName\"]==\"Saul\":\n",
-    "                print(school[\"name\"],\"-\", student[\"firstName\"])\n",
-    "                break\n"
+    "def searchName(schoolSystem,name):\n",
+    "    for school in schoolSystem[\"schools\"]:\n",
+    "        for classRooms in school[\"classRooms\"]:\n",
+    "            for student in classRooms[\"students\"]:\n",
+    "                if student[\"firstName\"]==name:\n",
+    "                    print(school[\"name\"],\"-\", student[\"firstName\"])\n",
+    "                    return\n",
+    "\n",
+    "searchName(schoolSystem,\"Saul\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
